# exercises_arjancodes

./: .gitignore  general_notes_2023.txt  general_notes_2024.txt  notes.txt  requirements.txt  simple_dependency_inversion.py  strategy_patern.py  uv_notes.txt
abstraction_2025/: pyproject.toml
ai_design_2025/: chain_of_responsability.py  observer.py  pyproject.toml
api_testing_2023/: README.md  main.py  notes.txt  requirements.txt  test_api.py
archive_2024/: general_notes_2024.txt
async_programming/: main.py
asyncio_2022/: req_http.py
asyncio_dive/: async_api_client.py  async_server.py  book.db  pyproject.toml  sync_server.py
attrs_2023/: example_dataclasses.py
builder_2025/: htmlbuilder.py  main.py  notes.txt  page.html  pyproject.toml
class_guide/: before.py  dependency_injection.py  notes.txt
code_coverage/: .coverage  vehicle_info.py  vehicle_info_test.py
composition_inheritance/: composition_vs_inheritance_comp.py  composition_vs_inheritance_inh.py
context_2025/: pyproject.toml
context_managers/: constants.py
coupling_hard_2025/: content_coupling_after.py  global_coupling_after.py  notes.txt  stamp_coupling_after.py
custom_exceptions_2024/: custom_exceptions.py  exception_chaining.py  how_to_use_exceptions.py
dataclases/: dataclases.py
date_time_2022/: main.py  pendulum_ex.py
decorators_2023/: decorators_abstract.py  functional_decorators.py  functools_wraps.py
decorators_2025/: dec_order.py  notes.txt  rate_limit.py
dependency_injection_inversion/: main-test.py  main.py
diagrams/: MERMAID.md  (+1 more)
poetry_2024/: pyproject.toml
(+472 files in other folders)
